--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -14,16 +14,16 @@
     "  * [video](https://youtu.be/Iu1JtefueM8) explaining what we do\n",
     "      \n",
     "#### Other sources we sync\n",
-    "* [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)\n",
-    "* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb) \n",
+    "* Famous people on Uppsala old cemetery [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)\n",
+    "* Swedish Literature Bank - [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb) \n",
     "  * WD property [P5101](https://www.wikidata.org/wiki/Property_talk:P5101) [P5123](https://www.wikidata.org/wiki/Property_talk:P5123)\n",
     "* [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)\n",
     "  * WD [property 8024](https://www.wikidata.org/wiki/Property:P8024)\n",
-    "* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb) \n",
+    "* The Swedish National Archive [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb) \n",
     "  * WD [property 3217](https://www.wikidata.org/wiki/Property:P3217) \n",
-    "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)\n",
+    "* The Biographical Dictionary of Swedish Women [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)\n",
     "  * WD [property 4963](https://www.wikidata.org/wiki/Property:P4963)\n",
-    "* [Svenska Akademien](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademien.ipynb) \n",
+    "* Swedish Academy - [Svenska Akademien](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademien.ipynb) \n",
     "  * WD [property 5325](https://www.wikidata.org/wiki/Property:P5325) \n"
    ]
   },
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-10 11:04:09.615461\n"
+      "Last run:  2020-10-12 01:21:52.943698\n"
      ]
     }
    ],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "[10 rows x 11 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "Name: WD_Nobel, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,14 +896,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End run:  2020-10-10 11:04:12.690378\n"
+      "End run:  2020-10-12 01:21:56.137574\n"
      ]
     }
    ],
@@ -913,14 +913,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:03.083624\n"
+      "Time elapsed (hh:mm:ss.ms) 0:00:03.203387\n"
      ]
     }
    ],
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -948,149 +948,149 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>awardYear</th>\n",
        "      <th>wd</th>\n",
        "      <th>linkjson</th>\n",
        "      <th>category</th>\n",
-       "      <th>name_en</th>\n",
        "      <th>linkhtml</th>\n",
-       "      <th>awardYear</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>938</th>\n",
+       "      <td>Peter Handke</td>\n",
+       "      <td>2019</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q44107'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=980'>json</a></td>\n",
        "      <td>Literature</td>\n",
-       "      <td>Peter Handke</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/980'>html</a></td>\n",
-       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>939</th>\n",
+       "      <td>Abiy Ahmed Ali</td>\n",
+       "      <td>2019</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q50365049'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=981'>json</a></td>\n",
        "      <td>Peace</td>\n",
-       "      <td>Abiy Ahmed Ali</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/981'>html</a></td>\n",
-       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>940</th>\n",
+       "      <td>Abhijit Banerjee</td>\n",
+       "      <td>2019</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q320578'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=982'>json</a></td>\n",
        "      <td>Economic Sciences</td>\n",
-       "      <td>Abhijit Banerjee</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/982'>html</a></td>\n",
-       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>941</th>\n",
+       "      <td>Esther Duflo</td>\n",
+       "      <td>2019</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q434509'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=983'>json</a></td>\n",
        "      <td>Economic Sciences</td>\n",
-       "      <td>Esther Duflo</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/983'>html</a></td>\n",
-       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>942</th>\n",
+       "      <td>Michael Kremer</td>\n",
+       "      <td>2019</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1635006'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
        "      <td>Economic Sciences</td>\n",
-       "      <td>Michael Kremer</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
-       "      <td>2019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>943</th>\n",
+       "      <td>Harvey J. Alter</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q5677307'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td>Harvey J. Alter</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/985'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>944</th>\n",
+       "      <td>Michael Houghton</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1927895'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td>Michael Houghton</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/986'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>945</th>\n",
+       "      <td>Charles M. Rice</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q22669757'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td>Charles M. Rice</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/987'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>946</th>\n",
+       "      <td>Roger Penrose</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q193803'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
        "      <td>Physics</td>\n",
-       "      <td>Roger Penrose</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/988'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>947</th>\n",
+       "      <td>Reinhard Genzel</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q65807'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
        "      <td>Physics</td>\n",
-       "      <td>Reinhard Genzel</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/989'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>948</th>\n",
+       "      <td>Andrea Ghez</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q493956'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
        "      <td>Physics</td>\n",
-       "      <td>Andrea Ghez</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/990'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>949</th>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q17280087'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
        "      <td>Chemistry</td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>950</th>\n",
+       "      <td>Jennifer A. Doudna</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q56068'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
        "      <td>Chemistry</td>\n",
-       "      <td>Jennifer A. Doudna</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>951</th>\n",
+       "      <td>Louise Glück</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q2344210'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
        "      <td>Literature</td>\n",
-       "      <td>Louise Glück</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/993'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>952</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q204344'>Wikidata</a></td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=994'>json</a></td>\n",
        "      <td>Peace</td>\n",
-       "      <td>NaN</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/994'>html</a></td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -1099,7 +1099,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
     "    * [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Sidor_som_anv%25C3%25A4nder_Mall:Nobelprize) / [Nobel week](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&start=2020-10-05&end=2020-10-12&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Sidor_som_anv%25C3%25A4nder_Mall:Nobelprize)\n",
     "  * sr:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
     "  \n",
-    "Task [T251055](https://phabricator.wikimedia.org/T251055)  "
+    "Task [https://phabricator.wikimedia.org/T251055 T251055]  "
    ]
   },
   {
