--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -5,8 +5,13 @@
    "metadata": {},
    "source": [
     "# Nobel API - check Wikidata and Nobel API\n",
-    "version. 0.41 added video and view statistics for Nobelweek 5-12 October 2020\n",
+    "version. 0.42 added video and view statistics for Nobelweek 5-12 October 2020\n",
+    "\n",
+    "The purpose of this Notebook is to have Nobelprize winners in Wikidata in synch with the prizewinners at Nobelprize... lesson learned is that we also find vandalization in Wikidata....\n",
+    "\n",
+    "\n",
     "* This [Jupyter Notebook](https://tinyurl.com/SynchWSNobel)  \n",
+    "\n",
     "\n",
     "  * Wikidata property [Property:P8024](https://www.wikidata.org/wiki/Property:P8024)\n",
     "  * [Developer zone nobelprize.org](https://www.nobelprize.org/about/developer-zone-2/)\n",
