--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -111,291 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>knownName</th>\n",
-       "      <th>givenName</th>\n",
-       "      <th>familyName</th>\n",
-       "      <th>fullName</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>birth</th>\n",
-       "      <th>links</th>\n",
-       "      <th>nobelPrizes</th>\n",
-       "      <th>death</th>\n",
-       "      <th>orgName</th>\n",
-       "      <th>nativeName</th>\n",
-       "      <th>acronym</th>\n",
-       "      <th>founded</th>\n",
-       "      <th>penName</th>\n",
-       "      <th>birthCountry</th>\n",
-       "      <th>birthCountryNow</th>\n",
-       "      <th>birthContinent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>987</td>\n",
-       "      <td>{'en': 'Charles M. Rice', 'se': 'Charles M. Ri...</td>\n",
-       "      <td>{'en': 'Charles', 'se': 'Charles'}</td>\n",
-       "      <td>{'en': 'Rice', 'se': 'Rice'}</td>\n",
-       "      <td>{'en': 'Charles M. Rice', 'se': 'Charles M. Ri...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>{'date': '1952-00-00', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Phy...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>772</th>\n",
-       "      <td>988</td>\n",
-       "      <td>{'en': 'Roger Penrose', 'se': 'Roger Penrose'}</td>\n",
-       "      <td>{'en': 'Roger', 'se': 'Roger'}</td>\n",
-       "      <td>{'en': 'Penrose', 'se': 'Penrose'}</td>\n",
-       "      <td>{'en': 'Roger Penrose', 'se': 'Roger Penrose'}</td>\n",
-       "      <td>male</td>\n",
-       "      <td>{'date': '1931-00-00', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Phy...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>716</th>\n",
-       "      <td>989</td>\n",
-       "      <td>{'en': 'Reinhard Genzel', 'se': 'Reinhard Genz...</td>\n",
-       "      <td>{'en': 'Reinhard', 'se': 'Reinhard'}</td>\n",
-       "      <td>{'en': 'Genzel', 'se': 'Genzel'}</td>\n",
-       "      <td>{'en': 'Reinhard Genzel', 'se': 'Reinhard Genz...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>{'date': '1952-03-24', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Phy...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>990</td>\n",
-       "      <td>{'en': 'Andrea Ghez', 'se': 'Andrea Ghez'}</td>\n",
-       "      <td>{'en': 'Andrea', 'se': 'Andrea'}</td>\n",
-       "      <td>{'en': 'Ghez', 'se': 'Ghez'}</td>\n",
-       "      <td>{'en': 'Andrea Ghez', 'se': 'Andrea Ghez'}</td>\n",
-       "      <td>female</td>\n",
-       "      <td>{'date': '1965-00-00', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Phy...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>216</th>\n",
-       "      <td>991</td>\n",
-       "      <td>{'en': 'Emmanuelle Charpentier', 'se': 'Emmanu...</td>\n",
-       "      <td>{'en': 'Emmanuelle', 'se': 'Emmanuelle'}</td>\n",
-       "      <td>{'en': 'Charpentier', 'se': 'Charpentier'}</td>\n",
-       "      <td>{'en': 'Emmanuelle Charpentier', 'se': 'Emmanu...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>{'date': '1968-12-11', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Che...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>448</th>\n",
-       "      <td>992</td>\n",
-       "      <td>{'en': 'Jennifer A. Doudna', 'se': 'Jennifer A...</td>\n",
-       "      <td>{'en': 'Jennifer A.', 'se': 'Jennifer A.'}</td>\n",
-       "      <td>{'en': 'Doudna', 'se': 'Doudna'}</td>\n",
-       "      <td>{'en': 'Jennifer A. Doudna', 'se': 'Jennifer A...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>{'date': '1964-02-19', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Che...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>559</th>\n",
-       "      <td>993</td>\n",
-       "      <td>{'en': 'Louise Glück', 'se': 'Louise Glück'}</td>\n",
-       "      <td>{'en': 'Louise', 'se': 'Louise'}</td>\n",
-       "      <td>{'en': 'Glück', 'se': 'Glück'}</td>\n",
-       "      <td>{'en': 'Louise Glück', 'se': 'Louise Glück'}</td>\n",
-       "      <td>female</td>\n",
-       "      <td>{'date': '1943-00-00', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Lit...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>946</th>\n",
-       "      <td>994</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Pea...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{'en': 'World Food Programme', 'no': 'Verdens ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>WFP</td>\n",
-       "      <td>{'date': '1961-00-00', 'place': {'locationStri...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>680</th>\n",
-       "      <td>995</td>\n",
-       "      <td>{'en': 'Paul R. Milgrom', 'se': 'Paul R. Milgr...</td>\n",
-       "      <td>{'en': 'Paul', 'se': 'Paul'}</td>\n",
-       "      <td>{'en': 'Milgrom', 'se': 'Milgrom'}</td>\n",
-       "      <td>{'en': 'Paul R. Milgrom', 'se': 'Paul R. Milgr...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>{'date': '1948-04-20', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Eco...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>741</th>\n",
-       "      <td>996</td>\n",
-       "      <td>{'en': 'Robert B. Wilson', 'se': 'Robert B. Wi...</td>\n",
-       "      <td>{'en': 'Robert', 'se': 'Robert'}</td>\n",
-       "      <td>{'en': 'Wilson', 'se': 'Wilson'}</td>\n",
-       "      <td>{'en': 'Robert B. Wilson', 'se': 'Robert B. Wi...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>{'date': '1937-00-00', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2020', 'category': {'en': 'Eco...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      id  ... birthContinent\n",
-       "132  987  ...            NaN\n",
-       "772  988  ...            NaN\n",
-       "716  989  ...            NaN\n",
-       "54   990  ...            NaN\n",
-       "216  991  ...            NaN\n",
-       "448  992  ...            NaN\n",
-       "559  993  ...            NaN\n",
-       "946  994  ...            NaN\n",
-       "680  995  ...            NaN\n",
-       "741  996  ...            NaN\n",
-       "\n",
-       "[10 rows x 18 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dftot[\"id\"] = dftot[\"id\"].astype(\"int\")\n",
     "\n",
     "dftot.sort_values(by=['id'], ascending=[True], inplace=True)\n",
-    "dftot.tail(10)\n"
+    "#dftot.tail(10)\n"
    ]
   },
   {
