--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-12 12:13:18.575725\n"
+      "Last run:  2020-10-13 16:36:04.896622\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,212 +276,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item</th>\n",
-       "      <th>itemLabel</th>\n",
-       "      <th>NobelAPI</th>\n",
-       "      <th>id</th>\n",
-       "      <th>name_en</th>\n",
-       "      <th>name_se</th>\n",
-       "      <th>link</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>awardYear</th>\n",
-       "      <th>category</th>\n",
-       "      <th>WD_Nobel</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>945</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q22669757</td>\n",
-       "      <td>Charles M. Rice</td>\n",
-       "      <td>987</td>\n",
-       "      <td>987</td>\n",
-       "      <td>Charles M. Rice</td>\n",
-       "      <td>Charles M. Rice</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Physiology or Medicine</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>946</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q193803</td>\n",
-       "      <td>Roger Penrose</td>\n",
-       "      <td>988</td>\n",
-       "      <td>988</td>\n",
-       "      <td>Roger Penrose</td>\n",
-       "      <td>Roger Penrose</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Physics</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>947</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q65807</td>\n",
-       "      <td>Reinhard Genzel</td>\n",
-       "      <td>989</td>\n",
-       "      <td>989</td>\n",
-       "      <td>Reinhard Genzel</td>\n",
-       "      <td>Reinhard Genzel</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Physics</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>948</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q493956</td>\n",
-       "      <td>Andrea M. Ghez</td>\n",
-       "      <td>990</td>\n",
-       "      <td>990</td>\n",
-       "      <td>Andrea Ghez</td>\n",
-       "      <td>Andrea Ghez</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Physics</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>949</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q17280087</td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
-       "      <td>991</td>\n",
-       "      <td>991</td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Chemistry</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>950</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q56068</td>\n",
-       "      <td>Jennifer Doudna</td>\n",
-       "      <td>992</td>\n",
-       "      <td>992</td>\n",
-       "      <td>Jennifer A. Doudna</td>\n",
-       "      <td>Jennifer A. Doudna</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Chemistry</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>951</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q2344210</td>\n",
-       "      <td>Louise Glück</td>\n",
-       "      <td>993</td>\n",
-       "      <td>993</td>\n",
-       "      <td>Louise Glück</td>\n",
-       "      <td>Louise Glück</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Literature</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>952</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q204344</td>\n",
-       "      <td>World Food Programme</td>\n",
-       "      <td>994</td>\n",
-       "      <td>994</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Peace</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>953</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q1359990</td>\n",
-       "      <td>Paul Milgrom</td>\n",
-       "      <td>995</td>\n",
-       "      <td>995</td>\n",
-       "      <td>Paul R. Milgrom</td>\n",
-       "      <td>Paul R. Milgrom</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Economic Sciences</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>954</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q377265</td>\n",
-       "      <td>Robert B. Wilson</td>\n",
-       "      <td>996</td>\n",
-       "      <td>996</td>\n",
-       "      <td>Robert B. Wilson</td>\n",
-       "      <td>Robert B. Wilson</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Economic Sciences</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         item  ... WD_Nobel\n",
-       "945  http://www.wikidata.org/entity/Q22669757  ...     both\n",
-       "946    http://www.wikidata.org/entity/Q193803  ...     both\n",
-       "947     http://www.wikidata.org/entity/Q65807  ...     both\n",
-       "948    http://www.wikidata.org/entity/Q493956  ...     both\n",
-       "949  http://www.wikidata.org/entity/Q17280087  ...     both\n",
-       "950     http://www.wikidata.org/entity/Q56068  ...     both\n",
-       "951   http://www.wikidata.org/entity/Q2344210  ...     both\n",
-       "952    http://www.wikidata.org/entity/Q204344  ...     both\n",
-       "953   http://www.wikidata.org/entity/Q1359990  ...     both\n",
-       "954    http://www.wikidata.org/entity/Q377265  ...     both\n",
-       "\n",
-       "[10 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfmerge = pd.merge(WDNobel, NobelTot,how='outer', left_on=\"NobelAPI\",right_on=\"id\",indicator=True)\n",
     "dfmerge['_merge'] = dfmerge['_merge'].str.replace('left_only','WD_only').str.replace('right_only','Nobel_only')\n",
     "dfmerge.rename(columns={\"_merge\": \"WD_Nobel\"},inplace = True)    \n",
-    "dfmerge[-10:]  "
+    "#dfmerge[-10:]  "
    ]
   },
   {
@@ -631,7 +431,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End run:  2020-10-12 12:13:22.146677\n"
+      "End run:  2020-10-13 16:36:08.386006\n"
      ]
     }
    ],
@@ -648,7 +448,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:03.582088\n"
+      "Time elapsed (hh:mm:ss.ms) 0:00:03.498873\n"
      ]
     }
    ],
@@ -676,149 +476,149 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>linkjson</th>\n",
+       "      <th>name_en</th>\n",
        "      <th>linkhtml</th>\n",
        "      <th>awardYear</th>\n",
-       "      <th>name_en</th>\n",
-       "      <th>category</th>\n",
        "      <th>wd</th>\n",
-       "      <th>linkjson</th>\n",
+       "      <th>category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>940</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=982'>json</a></td>\n",
+       "      <td>Abhijit Banerjee</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/982'>html</a></td>\n",
        "      <td>2019</td>\n",
-       "      <td>Abhijit Banerjee</td>\n",
-       "      <td>Economic Sciences</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q320578'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=982'>json</a></td>\n",
+       "      <td>Economic Sciences</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>941</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=983'>json</a></td>\n",
+       "      <td>Esther Duflo</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/983'>html</a></td>\n",
        "      <td>2019</td>\n",
-       "      <td>Esther Duflo</td>\n",
-       "      <td>Economic Sciences</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q434509'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=983'>json</a></td>\n",
+       "      <td>Economic Sciences</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>942</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
+       "      <td>Michael Kremer</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
        "      <td>2019</td>\n",
-       "      <td>Michael Kremer</td>\n",
-       "      <td>Economic Sciences</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1635006'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
+       "      <td>Economic Sciences</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>943</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
+       "      <td>Harvey J. Alter</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/985'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Harvey J. Alter</td>\n",
-       "      <td>Physiology or Medicine</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q5677307'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
+       "      <td>Physiology or Medicine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>944</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
+       "      <td>Michael Houghton</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/986'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Michael Houghton</td>\n",
-       "      <td>Physiology or Medicine</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1927895'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
+       "      <td>Physiology or Medicine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>945</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
+       "      <td>Charles M. Rice</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/987'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Charles M. Rice</td>\n",
-       "      <td>Physiology or Medicine</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q22669757'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
+       "      <td>Physiology or Medicine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>946</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
+       "      <td>Roger Penrose</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/988'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Roger Penrose</td>\n",
-       "      <td>Physics</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q193803'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
+       "      <td>Physics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>947</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
+       "      <td>Reinhard Genzel</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/989'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Reinhard Genzel</td>\n",
-       "      <td>Physics</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q65807'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
+       "      <td>Physics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>948</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
+       "      <td>Andrea Ghez</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/990'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Andrea Ghez</td>\n",
-       "      <td>Physics</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q493956'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
+       "      <td>Physics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>949</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
-       "      <td>Chemistry</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q17280087'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
+       "      <td>Chemistry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>950</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
+       "      <td>Jennifer A. Doudna</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Jennifer A. Doudna</td>\n",
-       "      <td>Chemistry</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q56068'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
+       "      <td>Chemistry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>951</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
+       "      <td>Louise Glück</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/993'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Louise Glück</td>\n",
-       "      <td>Literature</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q2344210'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
+       "      <td>Literature</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>952</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=994'>json</a></td>\n",
+       "      <td>NaN</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/994'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Peace</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q204344'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=994'>json</a></td>\n",
+       "      <td>Peace</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>953</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=995'>json</a></td>\n",
+       "      <td>Paul R. Milgrom</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/995'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Paul R. Milgrom</td>\n",
-       "      <td>Economic Sciences</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1359990'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=995'>json</a></td>\n",
+       "      <td>Economic Sciences</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>954</th>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=996'>json</a></td>\n",
+       "      <td>Robert B. Wilson</td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/996'>html</a></td>\n",
        "      <td>2020</td>\n",
-       "      <td>Robert B. Wilson</td>\n",
-       "      <td>Economic Sciences</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q377265'>Wikidata</a></td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=996'>json</a></td>\n",
+       "      <td>Economic Sciences</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
