--- a/Check WD kulturpersoner uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner uppsalakyrkogardar.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "## Webscrape kulturpersoner uppsalakyrkogardar\n",
-    "version 0.2\n",
+    "version 0.3\n",
     "\n",
     "checks uppsalakyrkogardar and compare with Wikidata. \n",
     "\n",
-    "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner.uppsalakyrkogardar.ipynb)\n",
+    "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)\n",
     "* Wikidata SPARQL https://w.wiki/PgP\n",
     "* Webpage to check https://kulturpersoner.uppsalakyrkogardar.se/galleri/\n",
     "\n",
@@ -31,7 +31,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last run:  2020-10-15 09:03:40.085903\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "start_time  = datetime.now()\n",
@@ -296,155 +304,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 121 entries, 0 to 120\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   person       121 non-null    object\n",
+      " 1   qid          121 non-null    object\n",
+      " 2   personLabel  121 non-null    object\n",
+      " 3   refURL       121 non-null    object\n",
+      " 4   href         121 non-null    object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 4.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "WDKulturGravar.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>person</th>\n",
-       "      <th>qid</th>\n",
+       "      <th>WD</th>\n",
        "      <th>personLabel</th>\n",
-       "      <th>refURL</th>\n",
-       "      <th>href</th>\n",
+       "      <th>kulturperson</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q63992891</td>\n",
-       "      <td>Q63992891</td>\n",
-       "      <td>Adolf Fredrik Nyman</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
-       "      <td>adolf-nyman</td>\n",
+       "      <th>106</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q919826#P119'>WD Q919826</a></td>\n",
+       "      <td>Rutger Sernander</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/rutger-sernander'>rutger-sernander</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q2913935</td>\n",
-       "      <td>Q2913935</td>\n",
-       "      <td>Adolf Murray</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
-       "      <td>adolph-murray</td>\n",
+       "      <th>107</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
+       "      <td>Sixtus Janson</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q2653181</td>\n",
-       "      <td>Q2653181</td>\n",
-       "      <td>Adolf Noreen</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
-       "      <td>adolf-noreen</td>\n",
+       "      <th>108</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
+       "      <td>Sonja Lyttkens</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q364399</td>\n",
-       "      <td>Q364399</td>\n",
-       "      <td>Adolph Törneros</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
-       "      <td>adolph-torneros</td>\n",
+       "      <th>109</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
+       "      <td>Svante Arrhenius</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q4949712</td>\n",
-       "      <td>Q4949712</td>\n",
-       "      <td>Agnes Geijer</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
-       "      <td>agnes-geijer</td>\n",
+       "      <th>110</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
+       "      <td>Sven Anders Hägg</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>111</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
+       "      <td>Sven Lilja</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
+       "      <td>Thekla Knös</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
+       "      <td>Topper Martyn</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
+       "      <td>Tycho Hedén</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
+       "      <td>Ulla-Bella Fridh</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q943803</td>\n",
-       "      <td>Q943803</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
        "      <td>Uno von Troil</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/u...</td>\n",
-       "      <td>uno-von-troil</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q6043915</td>\n",
-       "      <td>Q6043915</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
        "      <td>Viktor Persson</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/v...</td>\n",
-       "      <td>viktor-persson</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q4983741</td>\n",
-       "      <td>Q4983741</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
        "      <td>Vivi Laurent-Täckholm</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/v...</td>\n",
-       "      <td>vivi-tackholm</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q6197251</td>\n",
-       "      <td>Q6197251</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
        "      <td>Yngve Svalander</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/y...</td>\n",
-       "      <td>yngve-svalander</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q13390628</td>\n",
-       "      <td>Q13390628</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q13390628#P119'>WD Q13390628</a></td>\n",
        "      <td>Åke Holm</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
-       "      <td>ake-holm</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ake-holm'>ake-holm</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "<p>121 rows × 5 columns</p>\n",
-       "</div>"
+       "</table>"
       ],
       "text/plain": [
-       "                                       person  ...             href\n",
-       "0    http://www.wikidata.org/entity/Q63992891  ...      adolf-nyman\n",
-       "1     http://www.wikidata.org/entity/Q2913935  ...    adolph-murray\n",
-       "2     http://www.wikidata.org/entity/Q2653181  ...     adolf-noreen\n",
-       "3      http://www.wikidata.org/entity/Q364399  ...  adolph-torneros\n",
-       "4     http://www.wikidata.org/entity/Q4949712  ...     agnes-geijer\n",
-       "..                                        ...  ...              ...\n",
-       "116    http://www.wikidata.org/entity/Q943803  ...    uno-von-troil\n",
-       "117   http://www.wikidata.org/entity/Q6043915  ...   viktor-persson\n",
-       "118   http://www.wikidata.org/entity/Q4983741  ...    vivi-tackholm\n",
-       "119   http://www.wikidata.org/entity/Q6197251  ...  yngve-svalander\n",
-       "120  http://www.wikidata.org/entity/Q13390628  ...         ake-holm\n",
-       "\n",
-       "[121 rows x 5 columns]"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "WDKulturGravar"
+    "from IPython.display import display, HTML  \n",
+    "WDKulturGravar[\"WD\"] = \"<a href='http://www.wikidata.org/entity/\" + WDKulturGravar['qid'].astype(str) + \"#P119'>WD \" + WDKulturGravar['qid'].astype(str) + \"</a>\"\n",
+    "WDKulturGravar[\"kulturperson\"] = \"<a href='https://kulturpersoner.uppsalakyrkogardar.se/\" + WDKulturGravar['href'].astype(str) + \"'>\" + WDKulturGravar['href'].astype(str) + \"</a>\"\n",
+    "\n",
+    "pd.set_option(\"display.max.columns\", None) \n",
+    "HTML(WDKulturGravar[{'WD','personLabel','kulturperson'}].tail(15).to_html(escape=False))\n"
    ]
   },
   {
@@ -673,8 +685,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-10-13 13:13:04.171190\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:11.971874\n"
+      "Ended:  2020-10-15 09:03:44.735021\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:04.649589\n"
      ]
     }
    ],
